# Webschool

./: app.py  pyproject.toml
templates/: About.html  login.html
