[tool.poetry]
name = "webschool-1"
version = "0.1.0"
description = ""
authors = ["PythonicNoob <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase = "^3.0.1"
Flask = "^2.0.1"
Werkzeug = "^2.0.1"
urllib3 = "^1.26.6"
pdfminer = "^20191125"
sseclient = "^0.0.27"
moviepy = "^1.0.3"
SpeechRecognition = "^3.8.1"
sumy = "^0.8.1"
glob2 = "^0.7"
pydub = "^0.25.1"
nltk = "^3.6.2"
gunicorn = "^20.1.0"
python-jwt = "^3.3.0"
gcloud = "^0.18.3"
pycrypto = "^2.6.1"
requests-toolbelt = "^0.9.1"
punctuator = "^0.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
